# Trove

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  USAGE.md  main.py  pyproject.toml
data/: trouve.db
k8s/: cronJob.yaml  trouve-guitar-finder.yaml
tests/: test_marketplace.py
trouve/: __init__.py  __main__.py  db.py  main.py
trouve/agents/: __init__.py  evaluator.py  identifier.py
trouve/config/: __init__.py  settings.py
trouve/models/: __init__.py  deal.py  listing.py
trouve/notifications/: console.py  report.py  telegram.py
trouve/scrapers/: __init__.py  marketplace.py
trouve/services/: __init__.py  reverb.py
trouve/utils/: __init__.py  browser.py  currency.py  storage.py
